--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1302,3 +1302,14 @@ abstract = {A gauge theory with colour gauge group U(N) and quarks having a colo
   doi = {10.1103/PhysRevD.90.074502},
   url = {https://link.aps.org/doi/10.1103/PhysRevD.90.074502}
 }
+@article{ramachandran2011mayavi,
+  title={{Mayavi: 3D Visualization of Scientific Data}},
+  author={Ramachandran, P. and Varoquaux, G.},
+  journal={Computing in Science \& Engineering},
+  volume={13},
+  number={2},
+  pages={40--51},
+  issn={1521-9615},
+  year={2011},
+  publisher={IEEE}
+}
