--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -1865,17 +1865,17 @@ To determine the lattice spacing $a$ from the inverse coupling $\beta$ we use an
 
 SEE 
 https://journals-aps-org.ezproxy.uio.no/prd/pdf/10.1103/PhysRevD.92.074502
-FOR ERRORS IN TABLE\\
-\begin{tabular}{lccccccccc}
-\hline \hline Lattice & $\beta$ & $a[fm]$ & $L[fm]$ & $\frac{N_{OR}}{N_{HB}}$&$N_{therm}$ & $N_{decorr}^E$ & $N_{decorr}^Q$& $N_{meas}^E$& $N_{meas}^Q$\\
-\hline		   $16^4$ &   $6.0$ & $0.093$ & $1.49$  & 		4		 		 &$2000$  	  & $200$		   & $200$		   & $X$		 & $X$ \\	  
-	  		   $12^4$ & 		&     	  & $1.12$  & 		4		 		 &$2000$ 	  & $1$		   	   & $1$  		   & $X$		 & $X$\\ \hline 
-	  		   $20^4$ &   $6.13$& $0.075$ & $1.51$  & 		4		 		 &$2000$ 	  & $200$		   & $200$		   & $X$		 & $X$ \\
-	  		   $14^4$ & 		&  	 	  & $1.06$  & 		4		 		 &$2000$ 	  & $1$		       & $1$  		   & $X$		 & $X$\\ \hline
-	  		   $24^4$ &   $6.26$& $0.062$ & $1.50$  & 		4		 		 &$2000$ 	  & $400$		   & $800$		   & $X$		 & $X$ \\
-	  		   $16^4$ & 		&  	 	  & $1.00$  & 		4		 		 &$2000$ 	  & $1$		       & $1$  		   & $X$		 & $X$\\ \hline
-	  		   $32^4$ &   $6.46$& $0.047$ & $1.51$  & 		4		 		 &$2000$ 	  & $1350$		   & $4050$		   & $X$		 & $X$ \\
-	  		   $22^4$ & 		&  	 	  & $1.04$  & 		4		 		 &$2000$ 	  & $1$		       & $1$  		   & $X$		 & $X$
+FOR ERRORS IN TABLE\\Every ensemble has used $N_{OR}/N_{HB}=4$!\\
+\begin{tabular}{lcccccccc}
+\hline \hline Lattice & $\beta$ & $a[fm]$ & $L[fm]$ &$N_{therm}$ & $N_{decorr}^E$ & $N_{decorr}^Q$& $N_{meas}^E$& $N_{meas}^Q$\\
+\hline		   $16^4$ &   $6.0$ & $0.093$ & $1.49$  		 		 &$2000$  	  & $200$		   & $200$		   & $1704$		 & $1704$ \\	  
+	  		   $12^4$ & 		&     	  & $1.12$  		 		 &$2000$ 	  & $1$		   	   & $1$  		   & $2000$		 & $2000$\\ \hline 
+	  		   $20^4$ &   $6.13$& $0.075$ & $1.51$  		 		 &$2000$ 	  & $200$		   & $200$		   & $1324$		 & $1324$ \\
+	  		   $14^4$ & 		&  	 	  & $1.06$  		 		 &$2000$ 	  & $1$		       & $1$  		   & $2000$		 & $2000$\\ \hline
+	  		   $24^4$ &   $6.26$& $0.062$ & $1.50$  		 		 &$2000$ 	  & $400$		   & $800$		   & $1204$		 & $614$ \\
+	  		   $16^4$ & 		&  	 	  & $1.00$  		 		 &$2000$ 	  & $1$		       & $1$  		   & $2\cdot2000$		 & $2\cdot2000$\\ \hline
+	  		   $32^4$ &   $6.46$& $0.047$ & $1.51$  		 		 &$4700$ 	  & $1350$		   & $4050$		   & $645$		 & $215$ \\
+	  		   $22^4$ & 		&  	 	  & $1.04$  		 		 &$2000$ 	  & $1$		       & $1$  		   & $2\cdot3000$		 & $2\cdot3000$
 \end{tabular}
 
 Need:
@@ -2478,9 +2478,9 @@ equation \eqref{eq:cloverToFST} can then be applied to each clover term to get t
 \subsubsection{Energy Density}
 The definition for the energy of the gauge fields can be defined directly from the continuum in terms of the lattice field strength tensor as
 \begin{equation}
-E=\frac{1}{4} F_{\mu \nu}^{a} F_{\mu \nu}^{a} = \frac{1}{2}\operatorname{Tr}\left[ F_{\mu \nu} F_{\mu \nu}\right].
+E=\frac{a^4}{4} F_{\mu \nu}^{a} F_{\mu \nu}^{a} = \frac{a^4}{2}\operatorname{Tr}\left[ F_{\mu \nu} F_{\mu \nu}\right].
 \end{equation}
-Because the energy is an extrinsic property of the gauge field, it is usually normalized by the size of the lattice to get the energy density
+Because the energy is an extrinsic property of the gauge field, it is usually normalized by the lattice volume to get the energy density
 \begin{equation}
 E = \frac{1}{2\left| \Lambda \right|}\sum\limits_{x\in\Lambda}\operatorname{Tr}\left[ F_{\mu \nu}(x) F_{\mu \nu}(x)\right].
 \end{equation}
@@ -2965,7 +2965,17 @@ SENDS AND RECEIVES AT THE SAME TIME
 6.46 ENERGY DENSITY - uses 200 + updates between uncorrelated measurements\\
 6.46 Q - uses 2700-2800 ish updates between uncorrelated measurements(0.6 pm 0.19 at 2800) (0.58 pm 0.2 at 3200) (0.4 pm 0.15 at 3600)\\
 6.46 $Q^2$ - uses 2000-2400 ish updates between uncorrelated measurements (0.48 pm 0.15 at 2400) (0.6 pm 0.2 at 2000)\\\\6.0: 200 updates for Q, 200 updates for E\\6.13: 200 updates for Q, 200 updates for E\\6.26: 800 updates for Q, 400 updates for E 
-
+\subsection{Improved v. clover- Field strength tensor}
+\begin{figure}[H]
+\centering
+\includegraphics{FINALPLOTS/Q_def_diff.pdf}
+\caption[]{FINAL}\label{fig:PLACEHOLDER}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics{FINALPLOTS/E_def_diff.pdf}
+\caption[]{FINAL}\label{fig:PLACEHOLDER}
+\end{figure}
 \subsection{Scale setting with $t^2\langle E\rangle$}
 \begin{figure}[H]
 \centering
@@ -3028,39 +3038,31 @@ SENDS AND RECEIVES AT THE SAME TIME
 
 WHY LOOK AT THE SPATIAL DISTRIBUTION OF TOPOLOGICAL CHARGE? MAKING A QUALITATIVE ANALYSIS ABOUT THE DISTRIBUTION OF TOPOLOGICAL CHARGE DENSITY IS IMPORTANT, DOES IT CLUMP TOGETHER? IS IT EVENLY DISTRIBUTED? IT SUMS UP TO AN INTEGER, BASED ON ITS DISTRIBUTION WHY DO WE EXPECT THAT (THIS ONE i PROBABLY CAN'T ANSWER :p)? 
 
+
+
 \begin{figure}[H]
 \centering
-\includegraphics{FINALPLOTS/QdensityPlots/QdensityDistribution_beta_6_00_658.pdf}
-\caption[]{PLACEHOLDER!! ZERO FLOW TIME}\label{fig:PLACEHOLDER}
-\end{figure}
-\begin{figure}[H]
-\centering
-\includegraphics{FINALPLOTS/QdensityPlots/QdensityDistribution_beta_6_13_1582.pdf}
-\caption[]{PLACEHOLDER!! T0/2 FLOW TIME}\label{fig:PLACEHOLDER}
-\end{figure}
-\begin{figure}[H]
-\centering
-\includegraphics{FINALPLOTS/QdensityPlots/QdensityDistribution_beta_6_26_1804.pdf}
-\caption[]{PLACEHOLDER!! T0 FLOW TIME}\label{fig:PLACEHOLDER}
+\includegraphics[trim=30cm 0.0cm 28cm 2.0cm, clip=true,scale=0.2]{FINALPLOTS/QdensityPlots/3D/vFlowTime/torus_extdof1_44_Flowtime0.010000.pdf}
+\caption[]{Mayavi \cite{ramachandran2011mayavi}}\label{fig:PLACEHOLDER}
 \end{figure}
 
 \begin{figure}[H]
 \centering
-\includegraphics{FINALPLOTS/QdensityPlots/QdensityDistribution_beta_6_46_5.pdf}
-\caption[]{PLACEHOLDER!! T0 FLOW TIME}\label{fig:PLACEHOLDER}
+\includegraphics[trim=30cm 0.0cm 27cm 2.0cm, clip=true,scale=0.2]{FINALPLOTS/QdensityPlots/3D/vFlowTime/torus_extdof1_44_Flowtime0.410000.pdf}
+\caption[]{Mayavi \cite{ramachandran2011mayavi}}\label{fig:PLACEHOLDER}
 \end{figure}
 
 \begin{figure}[H]
 \centering
-\includegraphics[trim=37cm 0.0cm 35cm 8.0cm, clip=true,scale=0.3]{FINALPLOTS/QdensityPlots/3D/3d_q_densityPlot.pdf}
-\caption[]{FROM ENSEMBLE2}\label{fig:PLACEHOLDER}
-\end{figure}
-\begin{figure}[H]
-\centering
-\includegraphics[trim=37cm 0.0cm 35cm 8.0cm, clip=true,scale=0.3]{FINALPLOTS/QdensityPlots/3D/3d_q_densityPlot2.pdf}
-\caption[]{FROM ENSEMBLE3}\label{fig:PLACEHOLDER}
+\includegraphics[trim=30cm 0.0cm 27cm 2.0cm, clip=true,scale=0.2]{FINALPLOTS/QdensityPlots/3D/vFlowTime/torus_extdof1_44_Flowtime1.210000.pdf}
+\caption[]{Mayavi \cite{ramachandran2011mayavi}}\label{fig:PLACEHOLDER}
 \end{figure}
 
+\begin{figure}[H]
+\centering
+\includegraphics[trim=30cm 1.0cm 27cm 2.0cm, clip=true,scale=0.2]{FINALPLOTS/QdensityPlots/3D/vFlowTime/torus_extdof1_44_Flowtime13.000000.pdf}
+\caption[]{$Q = 3.99996$. Mayavi \cite{ramachandran2011mayavi}}\label{fig:PLACEHOLDER}
+\end{figure}
 
 \subsection{Topological susceptibility}
 \begin{figure}[H]
@@ -3114,12 +3116,6 @@ R = \frac{\left\langle Q^4 \right\rangle_c}{\left\langle Q^2 \right\rangle}
 
 
 \section{Error Analysis}
-
-\begin{figure}[H]
-\centering
-\includegraphics[trim=0.0cm 0.0cm 0cm 0.0cm, clip=true,scale = 0.9]{IntAutoCorrTime_v_Flowtime.pdf}
-\caption[]{Integrated Auto correlation time -- PLACEHOLDER!}\label{fig:PLACEHOLDER}
-\end{figure}
 
 \begin{figure}[H]
 \centering
