backing up thesis, chaged const fit on R to include coarsest lattice

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1313,3 +1313,88 @@ abstract = {A gauge theory with colour gauge group U(N) and quarks having a colo
   year={2011},
   publisher={IEEE}
 }
+@article{L_scher_2011,
+	doi = {10.1007/jhep07(2011)036},
+  
+	url = {https://doi.org/10.1007%2Fjhep07%282011%29036},
+  
+	year = 2011,
+	month = {jul},
+  
+	publisher = {Springer Science and Business Media {LLC}},
+  
+	volume = {2011},
+  
+	number = {7},
+  
+	author = {Martin Lüscher and Stefan Schaefer},
+  
+	title = {Lattice {QCD} without topology barriers},
+  
+	journal = {Journal of High Energy Physics}
+}
+@article{PhysRevD.92.094518,
+  title = {Nucleon electric dipole moment with the gradient flow: The $\ensuremath{\theta}$-term contribution},
+  author = {Shindler, Andrea and Luu, Thomas and de Vries, Jordy},
+  journal = {Phys. Rev. D},
+  volume = {92},
+  issue = {9},
+  pages = {094518},
+  numpages = {17},
+  year = {2015},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.92.094518},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.92.094518}
+}
+@article{Kennedy_1994,
+	doi = {10.1016/0920-5632(94)90514-2},
+  
+	url = {https://doi.org/10.1016%2F0920-5632%2894%2990514-2},
+  
+	year = 1994,
+	month = {apr},
+  
+	publisher = {Elsevier {BV}},
+  
+	volume = {34},
+  
+	pages = {786--788},
+  
+	author = {A.D. Kennedy and K.M. Bitar},
+  
+	title = {An exact local hybrid Monte Carlo algorithm for gauge theories},
+  
+	journal = {Nuclear Physics B - Proceedings Supplements}
+}
+@article{LHMC_autocorr,
+author = {Marenzoni, Paolo and Pugnetti, Luigi and Rossi, Pietro},
+year = {1993},
+month = {06},
+pages = {},
+title = {Measure of Autocorrelation Times of Local Hybrid Monte Carlo Algorithm for Lattice QCD},
+volume = {315},
+journal = {Physics Letters B},
+doi = {10.1016/0370-2693(93)90173-F}
+}
+
+@article{Del_Debbio_2005,
+	doi = {10.1103/physrevlett.94.032003},
+  
+	url = {https://doi.org/10.1103%2Fphysrevlett.94.032003},
+  
+	year = 2005,
+	month = {jan},
+  
+	publisher = {American Physical Society ({APS})},
+  
+	volume = {94},
+  
+	number = {3},
+  
+	author = {Luigi Del Debbio and Leonardo Giusti and Claudio Pica},
+  
+	title = {Topological Susceptibility in {SU}(3) Gauge Theory},
+  
+	journal = {Physical Review Letters}
+}
