Final commit of thesis...for now

--- a/doc/thesis.tex
+++ b/doc/thesis.tex
@@ -106,7 +106,7 @@
 \title{Title}
 \author{A.\ M.\ Kleven}
 \begin{document}
-\uiomasterfp[nosp, program={Computational science: physics},supervisors={Prof. A. Shindler\and Prof. M. Hjort-Jensen},title={Applications of the Yang-Mills gradient flow to topological observables},dept={Department of physics},color=grey]
+\uiomasterfp[nosp, program={Computational science: physics},supervisors={Prof. A. Shindler\and Prof. M. Hjort-Jensen},title={Applications of the Yang-Mills gradient flow to topological observables in QCD},dept={Department of physics},color=grey]
 
 
 \tableofcontents{}
